rh/client/scss/components/blocks/_hero.scss
//
// Hero
//
// Markup: components/hero.hbs
//
// .dark       - Dark version
// .has-cards  - With cards
//
// Style guide: Components.hero
//

.hero {
  @include block;
  @include topographic-background(#30A48E, "topo-1.svg");
  position: relative;
  color: $color-white;

  .container {
    justify-content: center;
  }
}

.hero-header,
.hero-content {
  text-align: center;
}

.hero-header {
  @include bottom-space(2);
}

.hero-title {
  margin-bottom: 0;
}

.hero-content-primary {
  @include bottomless;
}

.hero-title {
  font-weight: $global-weight-normal;
}

//
// Hero (complex)
//
// Hero with image.
//
// Markup: components/hero-complex.hbs
//
// .dark       - Dark version
//
// Style guide: Components.hero.complex
.hero.complex {
  .hero-header {
    @include bottom-space(4);
  }

  .hero-content {
    display: flex;
    flex-direction: column;
    max-width: 100%;
    text-align: left;
    color: $body-font-color;
  }

  // Image should be first
  .hero-content-primary {
    order: 2;
  }

  .hero-content-secondary {
    @include bottom-space;
  }

  &:before {
    height: 14rem;
  }
}

.hero-img {
  @include media-effect;
}

// Dark Version
.hero.dark:before {
  background-image: url(/static/img/topo-2.svg);
  background-color: $color-teal-dark;
}

// Hero with Cards
.hero-content-cards {
  @include collapse-gutters;

  // Emulate dark cards
  .card {
    @include media-effect;
    background: $color-beige;
  }

  .card-title > a,
  .card-title {
    font-size: 1.6rem;
    color: $color-navy;
  }

  @include breakpoint(medium) {
    @include container;
    @include xy-grid-layout(3, '.card');
    @include collapse-gutters;
  }
}

// Hero with cards
.hero.has-cards {
  &:before {
    height: 100%;
  }

  .hero-content-primary {
    order: 0;
    @include bottom-space(2);
  }

  .hero-content-cards {
    order: 1;
  }
}

.hero:not(.complex),
.hero.has-cards {
  .hero-content-primary,
  .hero-content-primary a {
    color: $color-white;
  }
}

// Hero Breakpoints
.hero {
  @include breakpoint(xlarge) {
    $large-margin: $global-margin * 6;
    padding-top: $large-margin;
    padding-bottom: $large-margin;

    .container {
      @include collapse-gutters;
    }

    .hero-header,
    .hero-content {
      @include xy-cell(10);
    }

    .hero-content-primary {
      @include xy-cell(8);
    }
  }
}

.hero.complex {
  @include breakpoint(large) {
    .hero-content {
      @include container;
      @include collapse-gutters;
      width: auto;
    }

    .hero-content-primary {
      @include xy-cell(auto);
      order: 1;
      margin-top: 0;
      padding-top: 5rem;
    }

    .hero-content-secondary {
      @include xy-cell(6);
      order: 2;
    }
  }

  @include breakpoint(xlarge) {
    &:before {
      height: 16.88rem;
    }

    .hero-content-primary {
      padding-top: 6.5rem;
    }
  }
}

.hero.has-cards {
  @include breakpoint(medium) {
    &:before {
      height: calc(100% - 45vw);
      min-height: 450px;
    }

    .hero-content {
      flex-flow: row wrap;
    }

    .hero-content-primary {
      flex: 0 1 54%; // NOTE: Approximately xy-cell(7)
      margin-right: auto;
      margin-left: auto;
      @include collapse-gutters;
      padding-top: 0;
      text-align: center;
    }

    .hero-content-cards {
      @include xy-grid-layout(2, '.card');
      @include collapse-gutters;
    }
  }
}

